# demoodle

./: .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  PLANS.md  PLANS_GRADINGO.md  PLANS_TRAINADILLO.md  README.md  VISION.md  pyproject.toml  skills-lock.json
.github/workflows/: lint.yml  publish.yml  test.yml
agents/: README.md  core-foundation.md  dependencies.md  docs-practices.md  domain.md
docs/: demo_script.md
docs/adr/: 0001-artifact-dict-typing.md  0002-frozen-dataclasses-for-core-value-types.md  0003-flat-dataset-windowing-in-training-loop.md  0004-policy-holds-live-module.md  0005-rng-split-unconditional-before-cache-check.md  0006-two-phase-runner-for-vocab-size.md
docs/architectures/: bigram.md  mlp.md  transformer.md  trigram.md
docs/demo_scripts/: demo_cli.md  demo_tui.md
docs/demoodle/: 001-project-skeleton.md  002-core-value-types.md  003-explicit-rng.md  004-ports-and-protocols.md  005-artifact-cache.md  006-pipeline-runner.md  007-corpus.md  008-char-tokenizer.md  009-dataset.md  010-bigram-architecture.md  011-pretraining.md  012-cli.md  README.md
docs/trainadillo/: 002-creation-functions.md  003-rng.md  004-random-creation.md  005-sorting-ops.md  006-probability-ops.md  007-masking-ops.md  008-autograd-engine.md  README.md  T1-tensor-class.md
openspec/: config.yaml
openspec/changes/archive/2026-05-22-config-scaffolding/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-22-rng-value-type/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-22-w2-core-value-types/: design.md  proposal.md  tasks.md
openspec/specs/app-config/: spec.md
openspec/specs/architecture-docs/: spec.md
openspec/specs/artifact-cache/: spec.md
openspec/specs/autograd-engine/: spec.md
openspec/specs/bigram-architecture/: spec.md
openspec/specs/char-tokenizer/: spec.md
openspec/specs/cli-call/: spec.md
openspec/specs/cli-train/: spec.md
openspec/specs/config/: spec.md
openspec/specs/core-value-types/: spec.md
openspec/specs/corpus-loader/: spec.md
openspec/specs/dataset-builder/: spec.md
openspec/specs/pipeline-ports/: spec.md
openspec/specs/pretrain-stage/: spec.md
openspec/specs/probability-ops/: spec.md
openspec/specs/random-creation/: spec.md
openspec/specs/rng/: spec.md
openspec/specs/shared-sampling/: spec.md
openspec/specs/stage-runner/: spec.md
openspec/specs/tensor-creation-functions/: spec.md
openspec/specs/tensor-foundations/: spec.md
openspec/specs/tensor-masking-ops/: spec.md
openspec/specs/tensor-sorting-ops/: spec.md
openspec/specs/trainadillo-generator/: spec.md
openspec/specs/trigram-architecture/: spec.md
src/demoodle/: __init__.py
src/demoodle/architectures/: __init__.py  bigram.py  sampling.py  trigram.py
src/demoodle/config/: __init__.py  demoodle.toml  schemas.py
src/demoodle/core/: __init__.py  rng.py  types.py
src/demoodle/data/: __init__.py  loaders.py  stages.py
src/demoodle/frontends/: __init__.py  cli.py
src/demoodle/ports/: __init__.py  protocols.py
src/demoodle/shell/: __init__.py  persistence.py  runner.py
src/demoodle/tokenizers/: __init__.py  char.py
src/demoodle/training/: __init__.py  stages.py
src/trainadillo/: __init__.py  _autograd.py  _creation.py  _ops.py  _random.py  _rng.py  _size.py  _tensor.py
tests/: __init__.py  test_config.py  test_core_types.py  test_rng.py  test_smoke.py
tests/architectures/: __init__.py  test_bigram.py  test_trigram.py
tests/data/: __init__.py  test_loaders.py  test_stages.py
tests/frontends/: __init__.py  test_cli.py
tests/ports/: __init__.py  test_protocols.py
tests/shell/: __init__.py  test_persistence.py  test_runner.py
tests/tokenizers/: __init__.py  test_char.py
tests/trainadillo/: __init__.py  test_autograd.py  test_compat_pytorch.py  test_creation.py  test_ops.py  test_random.py  test_rng.py  test_tensor.py
tests/training/: __init__.py  test_stages.py
(+89 files in other folders)
