[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "demoodle"
version = "0.1.0"
description = "Demoonstrate how (Large) Language Models are created"
readme = "README.md"
authors = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "configaroo>=0.6.1",
    "cyclopts>=4.15.0",
    "rich>=15.0.0",
    "textual>=8.2.7",
    "torch>=2.5.0",
]

[project.scripts]
demoodle = "demoodle:main"
demoo = "demoodle.frontends.cli:app"

[dependency-groups]
dev = [
    "prek>=0.4.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "ty>=0.0.38",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D103", "S101"]
