[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "demoodle"
version = "2026.4.0"
description = "Demoonstrate how (Large) Language Models are created"
readme = "README.md"
authors = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "configaroo>=0.6.1",
    "cyclopts>=4.15.0",
    "platformdirs>=4.9.6",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "textual>=8.2.7",
    "torch>=2.5.0",
]

[project.scripts]
demoodle = "demoodle:main"
demoo = "demoodle.frontends.cli:app"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "bumpver>=2025.1131",
    "prek>=0.4.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "twine>=6.2.0",
    "ty>=0.0.38",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning:torch",
    "ignore:Cache may be stale:UserWarning",
]

[tool.ruff]
target-version = "py314"
exclude = []

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Trailing comma missing (handled by formatter)
    "D203", # Force blank line before class docstring (incompatible with D211)
    "D213", # Start docstring on second line (incompatible with D212)
    "PLR0913", # Too many arguments (> 5) in function definitionD

]

[tool.ruff.lint.per-file-ignores]
# D100/D103: Test modules and functions are named descriptively; docstrings add no value
# PLR2004: Magic value used in comparison (OK for tests)
# S101: Use of `assert` (OK for tests)
# SLF001: Private member accessed (OK for tests)
"tests/**" = ["D100", "D103", "PLR2004", "S101", "SLF001"]

[tool.bumpver]
current_version = "v2026.4.0"
version_pattern = "vYYYY.MM.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
pre_commit_hook = ".pre-commit-bumpver.sh"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "YYYY.MM.PATCH"',
    'current_version = "{version}"'
]
"src/demoodle/__init__.py" = ['__version__ = "YYYY.MM.PATCH"']
